--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -39,41 +39,43 @@
           <h1>Festiv'Halloween</h1>
           
       </header>
-<h2>Programme pour enfants</h2>
-<h5>Entrez dans le monde magique d'Halloween avec notre sélection de films amusants et enchanteurs, spécialement pensés pour les enfants !  </h5>
-<p>Entre sorcières malicieuses, citrouilles animées et aventures palpitantes, vos petits bouts vivront des moments remplis de frissons doux et de rires. 
-    Chaque film a été soigneusement choisi pour offrir une expérience divertissante, tout en étant adaptée aux plus jeunes spectateurs. </p>
-<img src="/assets/img/Programmation/fantome.png" alt="Image fantômes">
-<p>Nous vous rappelons de bien consulter les indications d'âge minimum recommandées, afin de garantir que chaque enfant puisse profiter 
-    de cette programmation en toute sécurité et dans les meilleures conditions. Préparez-vous à vivre un Halloween plein de magie et de 
-    joie, avec des histoires captivantes qui raviront toute la famille ! </p>
-<h1>Oserez-vous voir nos films d'Halloween ?</h1>
-<h4>Notre sélection</h4>
-<p>30 octobre  à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
 
-<a href="FilmMonsieurJack.html">
-    <img src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
-</a>
-<p>L’étrange Noël de Monsieur Jack, de Henry Selick</p>
-<p>Début : 16h00</p>
-<p>Durée : 1h16</p>
-<p>À partir de 6 - 7 ans</p>
+<section class="programme">
+        <h2 class="programme__title">Programme pour enfants</h2>
+        <h5 class="programme__subtitle">Entrez dans le monde magique d'Halloween avec notre sélection de films amusants et enchanteurs, spécialement pensés pour les enfants !</h5>
+        <p class="programme__description">Entre sorcières malicieuses, citrouilles animées et aventures palpitantes, vos petits bouts vivront des moments remplis de frissons doux et de rires. Chaque film a été soigneusement choisi pour offrir une expérience divertissante, tout en étant adaptée aux plus jeunes spectateurs.</p>
+        <img class="programme__image" src="/assets/img/Programmation/fantome.png" alt="Image fantômes">
+        <p class="programme__note">Nous vous rappelons de bien consulter les indications d'âge minimum recommandées, afin de garantir que chaque enfant puisse profiter de cette programmation en toute sécurité et dans les meilleures conditions. Préparez-vous à vivre un Halloween plein de magie et de joie, avec des histoires captivantes qui raviront toute la famille !</p>
+        <h1 class="programme__cta">Oserez-vous voir nos films d'Halloween ?</h1>
+</section>
 
-<a href="FilmCasper.html">
-    <img src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
-</a>
-<p>Casper, de Brad Silberling</p>
-<p>Début : 17h20</p>
-<p>Durée : 1h36</p>
-<p>À partir de 6 ans</p>
+<section class="selection">
+        <h4 class="selection__title">Notre sélection</h4>
+        <p class="selection__schedule">30 octobre à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
 
-<a href="FilmAddams.html">
-    <img src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
-</a>
-<p>La famille Addams, de Conrad Vernon et Gerg Tiernan</p>
-<p>Début : 19h00</p>
-<p>Durée : 1h27</p>
-<p>À partir de 7 - 8 ans</p>
+        <a class="selection__item" href="FilmMonsieurJack.html">
+            <img class="selection__item-image" src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
+        </a>
+        <p class="selection__item-title">L’étrange Noël de Monsieur Jack, de Henry Selick</p>
+        <p class="selection__item-details">Début : 16h00</p>
+        <p class="selection__item-duration">Durée : 1h16</p>
+        <p class="selection__item-age">À partir de 6 - 7 ans</p>
+
+        <a class="selection__item" href="FilmCasper.html">
+            <img class="selection__item-image" src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
+        </a>
+        <p class="selection__item-title">Casper, de Brad Silberling</p>
+        <p class="selection__item-details">Début : 17h20</p>
+        <p class="selection__item-duration">Durée : 1h36</p>
+        <p class="selection__item-age">À partir de 6 ans</p>
+
+        <a class="selection__item" href="FilmAddams.html">
+            <img class="selection__item-image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
+        </a>
+        <p class="selection__item-title">La famille Addams, de Conrad Vernon et Gerg Tiernan</p>
+        <p class="selection__item-details">Début : 19h00</p>
+        <p class="selection__item-duration">Durée : 1h27</p>
+        <p class="selection__item-age">À partir de 7 - 8 ans</p>
 
 <a href="FilmScooby.html">
     <img src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
@@ -98,6 +100,7 @@
 <p>Début : 23h30</p>
 <p>Durée : 1h40</p>
 <p>À partir de 11 ans</p>
+</section>
 
 <footer class="footer">
   <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
