--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -77,29 +77,30 @@
         <p class="selection__item-duration">Durée : 1h27</p>
         <p class="selection__item-age">À partir de 7 - 8 ans</p>
 
-<a href="FilmScooby.html">
-    <img src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
-</a>
-<p>Joyeux Halloween, Scooby-Doo ! de Maxwell Atoms</p>
-<p>Début : 20h30</p>
-<p>Durée : 1h20</p>
-<p>À partir de 9 ans</p>
+        <a class="selection__item" href="FilmScooby.html">
+            <img class="selection__item-image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
+        </a>
+        <p class="selection__item-title">Joyeux Halloween, Scooby-Doo ! de Maxwell Atoms</p>
+        <p class="selection__item-details">Début : 20h30</p>
+        <p class="selection__item-duration">Durée : 1h20</p>
+        <p class="selection__item-age">À partir de 9 ans</p>
 
-<a href="FilmHocusPocus.html">
-    <img src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
-</a>
-<p>Hocus Pocus, de Kenny Ortega</p>
-<p>Début : 21h50</p>
-<p>Durée : 1h36</p>
-<p>À partir de 9 ans</p>
+        <a class="selection__item" href="FilmHocusPocus.html">
+          <img class="selection__item-image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
+        </a>
+        <p class="selection__item-title">Hocus Pocus, de Kenny Ortega</p>
+        <p class="selection__item-details">Début : 21h50</p>
+        <p class="selection__item-duration">Durée : 1h36</p>
+        <p class="selection__item-age">À partir de 9 ans</p>
 
-<a href="FilmHorloge.html">
-    <img src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
-</a>
-<p>La Prophétie de l'horloge, de Eli Roth</p>
-<p>Début : 23h30</p>
-<p>Durée : 1h40</p>
-<p>À partir de 11 ans</p>
+        <a class="selection__item" href="FilmHorloge.html">
+            <img class="selection__item-image" src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
+        </a>
+        <p class="selection__item-title">La Prophétie de l'horloge, de Eli Roth</p>
+        <p class="selection__item-details">Début : 23h30</p>
+        <p class="selection__item-duration">Durée : 1h40</p>
+        <p class="selection__item-age">À partir de 11 ans</p>
+
 </section>
 
 <footer class="footer">
