--- a/Restauration.html
+++ b/Restauration.html
@@ -39,15 +39,18 @@
           <h1>Festiv'Halloween</h1>
           
       </header>
-<h2>Restauration</h2>
-<img src="/assets/img/Restauration/colisee.jpg" alt="Photo du cinéma Le Colisée">
-<img src="/assets/img/Restauration/nourriture.jpg" alt="Photo nourriture halloween">
-<img src="/assets/img/Restauration/boisson.jpg" alt="Photo boisson d'halloween">
-<h5>Bienvenue au Café Le Colisée, votre pause gourmande pendant le festival ! </h5>
-<p>Pour chaque détenteur d'une entrée, nous proposons une sélection de snacks et de boissons pour vous rafraîchir et reprendre des forces entre deux séances.
-    Profitez d'un moment convivial tout en dégustant nos délicieuses options !</p> 
-<img src="/assets/img/Restauration/sorcière.png" alt="Image Petite sorcière">
-<img src="/assets/img/Restauration/chaudron.png" alt="Image chaudron de sorcière">
+
+    <section class="restauration">
+        <h2 class="restauration__title">Restauration</h2>
+        <img class="restauration__image" src="/assets/img/Restauration/colisee.jpg" alt="Photo du cinéma Le Colisée">
+        <img class="restauration__image" src="/assets/img/Restauration/nourriture.jpg" alt="Photo nourriture halloween">
+        <img class="restauration__image" src="/assets/img/Restauration/boisson.jpg" alt="Photo boisson d'halloween">
+        <h5 class="restauration__subtitle">Bienvenue au Café Le Colisée, votre pause gourmande pendant le festival ! </h5>
+        <p class="restauration__description">Pour chaque détenteur d'une entrée, nous proposons une sélection de snacks et de boissons pour vous rafraîchir et reprendre des forces entre deux séances.
+            Profitez d'un moment convivial tout en dégustant nos délicieuses options !</p> 
+        <img class="restauration__icon" src="/assets/img/Restauration/sorcière.png" alt="Image Petite sorcière">
+        <img class="restauration__icon" src="/assets/img/Restauration/chaudron.png" alt="Image chaudron de sorcière">
+    </section>
 
 <footer class="footer">
   <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
