--- a/EmmaTammi.html
+++ b/EmmaTammi.html
@@ -3,41 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Emma Tammi</title>
+    <link rel="stylesheet" href="/src/css/style.css"/>
 </head>
 <body>
-     <a href="index.html">
-      <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+  <header class="header">
+    <a class="header__logo" href="index.html">
+        <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
     </a>
-      <img src="/assets/icons/menu.svg" alt="menu-btn">
-      <nav class="headermenu menu" id="mainNav" aria-hidden="true">
-          <ul class="menulist list-unstyled">
-            <li class="menuitem">
-              <a class="menulink" href="billetterie.html"
-                >Billetterie</a
-              >
+    <img class="header__menu-btn" src="/assets/icons/menu.svg" alt="menu-btn">
+    <nav class="header__nav headermenu menu" id="mainNav" aria-hidden="true">
+        <ul class="header__menu-list menulist list-unstyled">
+            <li class="header__menu-item menuitem">
+                <a class="header__menu-link menulink" href="billetterie.html">Billetterie</a>
             </li>
-            <li class="menuitem">
-              <a class="menulink" href="ProgrammeAdulte.html">Programmation pour adultes</a>
+            <li class="header__menu-item menuitem">
+                <a class="header__menu-link menulink" href="ProgrammeAdulte.html">Programmation pour adultes</a>
             </li>
-            <li class="menuitem">
-              <a class="menulink" href="ProgrammeEnfant.html">Programmation pour enfants</a>
+            <li class="header__menu-item menuitem">
+                <a class="header__menu-link menulink" href="ProgrammeEnfant.html">Programmation pour enfants</a>
             </li>
-            <li class="menuitem">
-              <a class="menulink" href="Restauration.html">Restauration</a>
+            <li class="header__menu-item menuitem">
+                <a class="header__menu-link menulink" href="Restauration.html">Restauration</a>
             </li>
-            <li class="menuitem menuitem--btn">
-              <a class="menu__link" href="Apropos.html">À propos</a>
+            <li class="header__menu-item menuitem menuitem--btn">
+                <a class="header__menu-link menu__link" href="Apropos.html">À propos</a>
             </li>
-            <li class="menuitem menuitem--btn">
-              <a class="menu__link" href="contact.html">Contact</a>
+            <li class="header__menu-item menuitem menuitem--btn">
+                <a class="header__menu-link menu__link" href="contact.html">Contact</a>
             </li>
-          </ul>
-        </nav>
-      
-      <h1>Festiv'Halloween</h1>
-      
-  </header>
+        </ul>
+    </nav>
+    <h1 class="header__title">Festiv'Halloween</h1>
+</header>
 
   <section class="director">
         <h2 class="director__name">Emma Tammi</h2>
@@ -59,7 +57,7 @@
           <p>Mentions légales</p>
           <p>Politique de confidentialité</p>
       </div>
-      <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+      <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b6844111.svg" alt="Image chaudron de sorcière">
       <div class="footer__social">
           <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
           <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
