--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programme pour enfants</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
+    <link rel="stylesheet" href="/src/css/layout/footer.css"/>
+    <link rel="stylesheet" href="/src/css/components/menu.css"/>
+    <link rel="stylesheet" href="/src/css/base/main.css"/>
+    <link rel="stylesheet" href="/src/css/base/programme.css">
 </head>
 <body>
   <header class="header">
@@ -38,65 +42,65 @@
 </header>
 
 <section class="programme">
-        <h2 class="programme__title">Programme pour enfants</h2>
-        <h5 class="programme__subtitle">Entrez dans le monde magique d'Halloween avec notre sélection de films amusants et enchanteurs, spécialement pensés pour les enfants !</h5>
-        <p class="programme__description">Entre sorcières malicieuses, citrouilles animées et aventures palpitantes, vos petits bouts vivront des moments remplis de frissons doux et de rires. Chaque film a été soigneusement choisi pour offrir une expérience divertissante, tout en étant adaptée aux plus jeunes spectateurs.</p>
-        <img class="programme__image" src="/assets/img/Programmation/fantome.png" alt="Image fantômes">
-        <p class="programme__note">Nous vous rappelons de bien consulter les indications d'âge minimum recommandées, afin de garantir que chaque enfant puisse profiter de cette programmation en toute sécurité et dans les meilleures conditions. Préparez-vous à vivre un Halloween plein de magie et de joie, avec des histoires captivantes qui raviront toute la famille !</p>
-        <h1 class="programme__cta">Oserez-vous voir nos films d'Halloween ?</h1>
+        <h2 class="programme">Programme pour enfants</h2>
+        <h5 class="programme-introduction">Entrez dans le monde magique d'Halloween avec notre sélection de films amusants et enchanteurs, spécialement pensés pour les enfants !</h5>
+        <p class="programme-description">Entre sorcières malicieuses, citrouilles animées et aventures palpitantes, vos petits bouts vivront des moments remplis de frissons doux et de rires. Chaque film a été soigneusement choisi pour offrir une expérience divertissante, tout en étant adaptée aux plus jeunes spectateurs.</p>
+        <img class="programme-image" src="/assets/img/Programmation/fantome.svg" alt="Image fantômes">
+        <p class="programme-texte">Nous vous rappelons de bien consulter les indications d'âge minimum recommandées, afin de garantir que chaque enfant puisse profiter de cette programmation en toute sécurité et dans les meilleures conditions. Préparez-vous à vivre un Halloween plein de magie et de joie, avec des histoires captivantes qui raviront toute la famille !</p>
+        <h1 class="programme-defi">Oserez-vous voir nos films d'Halloween ?</h1>
 </section>
 
 <section class="selection">
-        <h4 class="selection__title">Notre sélection</h4>
-        <p class="selection__schedule">30 octobre à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
+        <h4 class="selection__titre">Notre sélection</h4>
+        <p class="selection__date">30 octobre à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
 
         <a class="selection__item" href="FilmMonsieurJack.html">
-            <img class="selection__item-image" src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
+            <img class="selection__image" src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
         </a>
-        <p class="selection__item-title">L’étrange Noël de Monsieur Jack, de Henry Selick</p>
-        <p class="selection__item-details">Début : 16h00</p>
-        <p class="selection__item-duration">Durée : 1h16</p>
-        <p class="selection__item-age">À partir de 6 - 7 ans</p>
+        <p class="selection__nom">L’étrange Noël de Monsieur Jack, de Henry Selick</p>
+        <p class="selection__debut">Début : 16h00</p>
+        <p class="selection__duree">Durée : 1h16</p>
+        <p class="selection__age">À partir de 6 - 7 ans</p>
 
         <a class="selection__item" href="FilmCasper.html">
-            <img class="selection__item-image" src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
+            <img class="selection__image" src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
         </a>
-        <p class="selection__item-title">Casper, de Brad Silberling</p>
-        <p class="selection__item-details">Début : 17h20</p>
-        <p class="selection__item-duration">Durée : 1h36</p>
-        <p class="selection__item-age">À partir de 6 ans</p>
+        <p class="selection__nom">Casper, de Brad Silberling</p>
+        <p class="selection__debut">Début : 17h20</p>
+        <p class="selection__duree">Durée : 1h36</p>
+        <p class="selection__age">À partir de 6 ans</p>
 
         <a class="selection__item" href="FilmAddams.html">
-            <img class="selection__item-image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
+            <img class="selection__image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
         </a>
-        <p class="selection__item-title">La famille Addams, de Conrad Vernon et Gerg Tiernan</p>
-        <p class="selection__item-details">Début : 19h00</p>
-        <p class="selection__item-duration">Durée : 1h27</p>
-        <p class="selection__item-age">À partir de 7 - 8 ans</p>
+        <p class="selection__nom">La famille Addams, de Conrad Vernon et Gerg Tiernan</p>
+        <p class="selection__debut">Début : 19h00</p>
+        <p class="selection__duree">Durée : 1h27</p>
+        <p class="selection__age">À partir de 7 - 8 ans</p>
 
         <a class="selection__item" href="FilmScooby.html">
-            <img class="selection__item-image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
+            <img class="selection__image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
         </a>
-        <p class="selection__item-title">Joyeux Halloween, Scooby-Doo ! de Maxwell Atoms</p>
-        <p class="selection__item-details">Début : 20h30</p>
-        <p class="selection__item-duration">Durée : 1h20</p>
-        <p class="selection__item-age">À partir de 9 ans</p>
+        <p class="selection__nom">Joyeux Halloween, Scooby-Doo ! de Maxwell Atoms</p>
+        <p class="selection__debut">Début : 20h30</p>
+        <p class="selection__duree">Durée : 1h20</p>
+        <p class="selection__age">À partir de 9 ans</p>
 
         <a class="selection__item" href="FilmHocusPocus.html">
-          <img class="selection__item-image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
+          <img class="selection__image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
         </a>
-        <p class="selection__item-title">Hocus Pocus, de Kenny Ortega</p>
-        <p class="selection__item-details">Début : 21h50</p>
-        <p class="selection__item-duration">Durée : 1h36</p>
-        <p class="selection__item-age">À partir de 9 ans</p>
+        <p class="selection__nom">Hocus Pocus, de Kenny Ortega</p>
+        <p class="selection__debut">Début : 21h50</p>
+        <p class="selection__duree">Durée : 1h36</p>
+        <p class="selection__age">À partir de 9 ans</p>
 
         <a class="selection__item" href="FilmHorloge.html">
-            <img class="selection__item-image" src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
+            <img class="selection__image" src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
         </a>
-        <p class="selection__item-title">La Prophétie de l'horloge, de Eli Roth</p>
-        <p class="selection__item-details">Début : 23h30</p>
-        <p class="selection__item-duration">Durée : 1h40</p>
-        <p class="selection__item-age">À partir de 11 ans</p>
+        <p class="selection__nom">La Prophétie de l'horloge, de Eli Roth</p>
+        <p class="selection__debut">Début : 23h30</p>
+        <p class="selection__duree">Durée : 1h40</p>
+        <p class="selection__age">À partir de 11 ans</p>
 
 </section>
 
