--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
 <title>Festiv'Holloween</title>
 <link rel="stylesheet" href="/src/css/style.css"/>
+<link rel="stylesheet" href="/src/css/base/main.css"/>
+<link rel="stylesheet" href="/src/css/layout/footer.css"/>
+<link rel="stylesheet" href="/src/css/components/menu.css"/>
+
 </head>
 
 <body>
@@ -59,18 +63,19 @@
             pour toute la famille, notre festival vous promet des moments inoubliables. Réservez vite vos places pour ne rien 
             manquer – cliquez sur le fantôme !</p>
 
-        <h3 class="ticket-info__adult-program-title">Programmation pour adultes</h3>
+        <h3 class="ticket-info__title">Programmation pour adultes</h3>
         <a class="ticket-info__adult-program-link" href="ProgrammeAdulte.html">
             <img class="ticket-info__adult-program-icon" src="/assets/icons/crane.svg" alt="Bouton programmation pour adultes">
         </a>
-        <p class="ticket-info__adult-program-description">Plongez dans l'univers sombre et captivant de notre programmation spéciale Halloween pour adultes. Frissons garantis 
+        <p class="ticket-info__description">Plongez dans l'univers sombre et captivant de notre programmation spéciale Halloween pour adultes. Frissons garantis 
             avec une sélection de films effrayants qui vous tiendront en haleine toute la nuit. Osez cliquer sur le crâne pour 
             découvrir ce qui vous attend... si vous n'avez pas peur !</p>
 
-        <h3 class="ticket-info__kids-program-title">Programmation pour enfants</h3>
+        <h3 class="ticket-info__title">Programmation pour enfants</h3>
         <a class="ticket-info__kids-program-link" href="ProgrammeEnfant.html">
             <img class="ticket-info__kids-program-icon" src="/assets/icons/chauvesouris.svg" alt="Bouton programmation pour enfants">
         </a>
+        <p class="ticket-info__description">Découvrez notre sélection spéciale de films d'Halloween pour enfants ! Plongez dans l'univers magique et amusant de cette fête, avec des films adaptés aux plus jeunes. Cliquez sur la chauve-souris pour explorer la programmation et partager un moment cinéma en famille !</p>
     </section>
 
 <section class="films">
