--- a/ProgrammeAdulte.html
+++ b/ProgrammeAdulte.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programme pour adultes</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
+    <link rel="stylesheet" href="/src/css/base/main.css"/>
+    <link rel="stylesheet" href="/src/css/layout/footer.css"/>
+    <link rel="stylesheet" href="/src/css/components/menu.css"/>
+    <link rel="stylesheet" href="/src/css/base/programme.css">
 </head>
 <body>
   <header class="header">
@@ -37,63 +41,63 @@
     <h1 class="header__title">Festiv'Halloween</h1>
 </header>
 
-<section class="programme-adultes">
-  <h2 class="programme-adultes__titre">Programme pour adultes</h2>
-  <h5 class="programme-adultes__introduction">Bienvenue dans l’univers du frisson et de la terreur avec notre programmation spéciale dédiée aux films d’horreur pour adultes.</h5>
-  <p class="programme-adultes__description">Vous y découvrirez des chefs-d'œuvre du genre, conçus pour repousser les limites de votre courage. Âmes sensibles s'abstenir !
+<section class="programme">
+  <h2 class="programme">Programme pour adultes</h2>
+  <h5 class="programme-introduction">Bienvenue dans l’univers du frisson et de la terreur avec notre programmation spéciale dédiée aux films d’horreur pour adultes.</h5>
+  <p class="programme-description">Vous y découvrirez des chefs-d'œuvre du genre, conçus pour repousser les limites de votre courage. Âmes sensibles s'abstenir !
     Chaque projection promet de vous immerger dans des histoires aussi captivantes qu'angoissantes, où la peur devient une expérience unique et intense.</p>
-  <img class="programme-adultes__image" src="/assets/img/Programmation/citrouille.jpg" alt="Image citrouilles">
-  <p class="programme-adultes__texte">Laissez-vous emporter par les œuvres des maîtres de l’horreur et vivez des moments cinématographiques qui ne manqueront pas de marquer vos nuits.
+  <img class="programme-image" src="/assets/img/Programmation/citrouille.svg" alt="Image citrouilles">
+  <p class="programme-texte">Laissez-vous emporter par les œuvres des maîtres de l’horreur et vivez des moments cinématographiques qui ne manqueront pas de marquer vos nuits.
     Alors, prêt à affronter l’inconnu et à explorer vos pires cauchemars sur grand écran ?
     Parcourez notre programmation détaillée et préparez-vous à des sensations fortes.</p>
-  <h1 class="programme-adultes__defi">Oserez-vous relever le défi ?</h1>
+  <h1 class="programme-defi">Oserez-vous relever le défi ?</h1>
 </section>
 
 <section class="selection-films">
-  <h4 class="selection-films__titre">Notre sélection</h4>
-  <p class="selection-films__horaire">29 octobre  à partir de 18h00 jusqu’au 30 octobre à 5h30</p>
+  <h4 class="selection__titre">Notre sélection</h4>
+  <p class="selection__date">29 octobre  à partir de 18h00 jusqu’au 30 octobre à 5h30</p>
 
-  <a class="selection-films__lien" href="FilmShinning.html">
-      <img class="selection-films__image" src="/assets/img/Film/filmshinning.jpg" alt="Film Shinning">
+  <a class="selection__lien" href="FilmShinning.html">
+      <img class="selection__image" src="/assets/img/Film/filmshinning.jpg" alt="Film Shinning">
   </a>
-  <p class="selection-films__nom">Shinning, de Stanley Kubrick</p>
-  <p class="selection-films__debut">Début : 18h00</p>
-  <p class="selection-films__duree">Durée : 2h26</p>
+  <p class="selection__nom">Shinning, de Stanley Kubrick</p>
+  <p class="selection__debut">Début : 18h00</p>
+  <p class="selection__duree">Durée : 2h26</p>
 
-  <a class="selection-films__lien" href="Filmanimaltronix.html">
-      <img class="selection-films__image" src="/assets/img/Film/filmanimaltronix.webp" alt="Film Five Nights at Freddy's">
+  <a class="selection__lien" href="Filmanimaltronix.html">
+      <img class="selection__image" src="/assets/img/Film/filmanimaltronix.webp" alt="Film Five Nights at Freddy's">
   </a>
-  <p class="selection-films__nom">Five Nights at Freddy's, de Emma Tammi</p>
-  <p class="selection-films__debut">Début : 20h30</p>
-  <p class="selection-films__duree">Durée : 1h50</p>
+  <p class="selection__nom">Five Nights at Freddy's, de Emma Tammi</p>
+  <p class="selection__debut">Début : 20h30</p>
+  <p class="selection__duree">Durée : 1h50</p>
 
-  <a class="selection-films__lien" href="FilmFreddy.html">
-      <img class="selection-films__image" src="/assets/img/Film/filmfreddy.webp" alt="Film Les Griffes de la nuit">
+  <a class="selection__lien" href="FilmFreddy.html">
+      <img class="selection__image" src="/assets/img/Film/filmfreddy.webp" alt="Film Les Griffes de la nuit">
   </a>
-  <p class="selection-films__nom">Les Griffes de la nuit, de Wes Craven</p>
-  <p class="selection-films__debut">Début : 22h25</p>
-  <p class="selection-films__duree">Durée : 1h30</p>
+  <p class="selection__nom">Les Griffes de la nuit, de Wes Craven</p>
+  <p class="selection__debut">Début : 22h25</p>
+  <p class="selection__duree">Durée : 1h30</p>
 
-<a class="selection-films__lien" href="FilmConjuring.html">
-      <img class="selection-films__image" src="/assets/img/Film/Filmconjuring.svg" alt="Film Conjuring, les dossiers Warren">
+<a class="selection__lien" href="FilmConjuring.html">
+      <img class="selection__image" src="/assets/img/Film/Filmconjuring.svg" alt="Film Conjuring, les dossiers Warren">
   </a>
-  <p class="selection-films__nom">Conjuring, les dossiers Warren, de James Wan</p>
-  <p class="selection-films__debut">Début : 00h00</p>
-  <p class="selection-films__duree">Durée : 1h52</p>
+  <p class="selection__nom">Conjuring, les dossiers Warren, de James Wan</p>
+  <p class="selection__debut">Début : 00h00</p>
+  <p class="selection__duree">Durée : 1h52</p>
 
-  <a class="selection-films__lien" href="FilmPalaisdurire.html">
+  <a class="selection__lien" href="FilmPalaisdurire.html">
       <img class="selection-films__image" src="/assets/img/Film/filmpalaisdurire.jpg" alt="Film Massacre au palais du rire">
   </a>
-  <p class="selection-films__nom">Massacre au palais du rire, de Andy Palmer</p>
-  <p class="selection-films__debut">Début : 1h55</p>
-  <p class="selection-films__duree">Durée : 1h30</p>
+  <p class="selection__nom">Massacre au palais du rire, de Andy Palmer</p>
+  <p class="selection__debut">Début : 1h55</p>
+  <p class="selection__duree">Durée : 1h30</p>
 
-  <a class="selection-films__lien" href="FilmCa.html">
-      <img class="selection-films__image" src="/assets/img/Film/filmça.webp" alt="Film Ça">
+  <a class="selection__lien" href="FilmCa.html">
+      <img class="selection__image" src="/assets/img/Film/filmça.webp" alt="Film Ça">
   </a>
-  <p class="selection-films__nom">Ça, de Andy Muschietti</p>
-  <p class="selection-films__debut">Début : 3h30</p>
-  <p class="selection-films__duree">Durée : 2h12</p>
+  <p class="selection__nom">Ça, de Andy Muschietti</p>
+  <p class="selection__debut">Début : 3h30</p>
+  <p class="selection__duree">Durée : 2h12</p>
 
 </section>
 
