--- a/AndresMuschietti.html
+++ b/AndresMuschietti.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrès Muschietti</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
+    <link rel="stylesheet" href="/src/css/base/invite.css"/>
 </head>
 <body>
   <header class="header">
