--- a/Andypalmer.html
+++ b/Andypalmer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andy Palmer</title>
     <link rel="stylesheet" href="/src/css/"/>
+    <link rel="stylesheet" href="/src/css/base/invite.css"/>
 </head>
 <body>
   <header class="header">
