--- a/FilmCasper.html
+++ b/FilmCasper.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casper</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
+    <link rel="stylesheet" href="/src/css/base/film.css">
 </head>
 <body>
   <header class="header">
