--- a/Filmanimaltronix.html
+++ b/Filmanimaltronix.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Five Nights at Freddy's</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
+    <link rel="stylesheet" href="/src/css/base/film.css">
 </head>
 <body>
   <header class="header">
