--- a/RobertEnglund.html
+++ b/RobertEnglund.html
@@ -13,25 +13,25 @@
         <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
     </a>
     <img class="header__menu-btn" src="/assets/icons/menu.svg" alt="menu-btn">
-    <nav class="header__nav headermenu menu" id="mainNav" aria-hidden="true">
-        <ul class="header__menu-list menulist list-unstyled">
-            <li class="header__menu-item menuitem">
-                <a class="header__menu-link menulink" href="billetterie.html">Billetterie</a>
+    <nav class="header__nav" id="mainNav" aria-hidden="true">
+        <ul class="header__menu-list">
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="billetterie.html">Billetterie</a>
             </li>
-            <li class="header__menu-item menuitem">
-                <a class="header__menu-link menulink" href="ProgrammeAdulte.html">Programmation pour adultes</a>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="ProgrammeAdulte.html">Programmation pour adultes</a>
             </li>
-            <li class="header__menu-item menuitem">
-                <a class="header__menu-link menulink" href="ProgrammeEnfant.html">Programmation pour enfants</a>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="ProgrammeEnfant.html">Programmation pour enfants</a>
             </li>
-            <li class="header__menu-item menuitem">
-                <a class="header__menu-link menulink" href="Restauration.html">Restauration</a>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="Restauration.html">Restauration</a>
             </li>
-            <li class="header__menu-item menuitem menuitem--btn">
-                <a class="header__menu-link menu__link" href="Apropos.html">À propos</a>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="Apropos.html">À propos</a>
             </li>
-            <li class="header__menu-item menuitem menuitem--btn">
-                <a class="header__menu-link menu__link" href="contact.html">Contact</a>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
