--- a/billetterie.html
+++ b/billetterie.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billetterie</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
+    <link rel="stylesheet" href="/src/css/base/billetterie.css">
 </head>
 <body>
   <header class="header">
@@ -45,7 +46,7 @@
         <img class="ticketing__image" src="/assets/img/Programmation/dague.svg" alt="Image d'une dague">
 </section>
 
-<section class="program program--children">
+<section class="program__child-adulte">
         <h4 class="program__title">Programme pour enfants</h4>
         <a class="program__link" href="ProgrammeEnfant.html">
             <img class="program__image" src="/assets/img/Programmation/citrouilleEnfant.jpg" alt="Image chasse aux bonbons">
@@ -55,7 +56,7 @@
         <button class="program__button">J'achète</button>
 </section>
 
-<section class="program program--adults">
+<section class="program__child-adulte">
         <h4 class="program__title">Programme pour adultes</h4>
         <a class="program__link" href="ProgrammeAdulte.html">
             <img class="program__image" src="/assets/img/Programmation/citrouilleAdulte.jpg" alt="Image d'une citrouille qui fait peur">
