--- a/FilmMonsieurJack.html
+++ b/FilmMonsieurJack.html
@@ -76,7 +76,7 @@
         Lassé de la monotonie de sa fête, Jack découvre par hasard “Christmas Town”, une ville où règne l'esprit de Noël. 
         Fasciné par cette ambiance joyeuse et colorée, il décide de prendre la place du Père Noël et d'apporter sa propre 
         version d’un Noël effrayant.</p>
-    <img class="summary__image" src="/assets/img/Film/Jack.png" alt="Image Monsieur Jack">
+    <img class="summary__image-jack" src="/assets/img/Film/Jack.png" alt="Image Monsieur Jack">
     <p class="summary__text">Cependant, Jack ne comprend pas la vraie signification de Noël, et son plan tourne au désastre lorsqu'il envoie des 
         cadeaux effrayants aux enfants du monde. Finalement, il réalise son erreur et remet les choses en ordre, laissant 
         Noël au Père Noël et revenant à sa véritable vocation, celle de Halloween.</p>
