--- a/AndresMuschietti.html
+++ b/AndresMuschietti.html
@@ -5,38 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrès Muschietti</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
-    <link rel="stylesheet" href="/src/css/base/invite.css"/>
+    <script type="module" src="/src/js/menu.js"></script>
+
 </head>
+
 <body>
-    <header class="header">
-        <a class="header__logo" href="index.html">
-            <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-        </a>
-        <img class="header__menu-btn" src="/assets/icons/menu.svg" alt="menu-btn">
-        <nav class="header__nav" id="mainNav" aria-hidden="true">
-            <ul class="header__menu-list">
-                <li class="header__menu-item">
-                    <a class="header__menu-link" href="billetterie.html">Billetterie</a>
-                </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-link" href="ProgrammeAdulte.html">Programmation pour adultes</a>
-                </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-link" href="ProgrammeEnfant.html">Programmation pour enfants</a>
-                </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-link" href="Restauration.html">Restauration</a>
-                </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-link" href="Apropos.html">À propos</a>
-                </li>
-                <li class="header__menu-item">
-                    <a class="header__menu-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-        </nav>
-        <h1 class="header__title">Festiv'Halloween</h1>
-    </header>
+  <header class="header">
+    <a class="header__logo" href="index.html">
+        <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+    </a>
+    <button class="header__menu-btn"><img src="/assets/icons/menu.svg" alt="menu-btn"></button>
+    <nav class="header__nav menu" id="mainNav" aria-hidden="true">
+        <ul class="header__menu-list">
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="billetterie.html">Billetterie</a>
+            </li>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="ProgrammeAdulte.html">Programmation pour adultes</a>
+            </li>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="ProgrammeEnfant.html">Programmation pour enfants</a>
+            </li>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="Restauration.html">Restauration</a>
+            </li>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="Apropos.html">À propos</a>
+            </li>
+            <li class="header__menu-item">
+                <a class="header__menu-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <h1 class="header__title">Festiv'Halloween</h1>
+</header>
           
       </header>
       <section class="director">
