--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
 <title>Festiv'Holloween</title>
 <link rel="stylesheet" href="/src/css/style.css"/>
-<link rel="stylesheet" href="/src/css/base/main.css"/>
-<link rel="stylesheet" href="/src/css/layout/footer.css"/>
-<link rel="stylesheet" href="/src/css/components/menu.css"/>
+
+<script type="module" src="/src/js/menu.js"></script>
 
 </head>
 
@@ -17,8 +16,8 @@
     <a class="header__logo" href="index.html">
         <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
     </a>
-    <img class="header__menu-btn" src="/assets/icons/menu.svg" alt="menu-btn">
-    <nav class="header__nav" id="mainNav" aria-hidden="true">
+    <button class="header__menu-btn"><img src="/assets/icons/menu.svg" alt="menu-btn"></button>
+    <nav class="header__nav menu" id="mainNav" aria-hidden="true">
         <ul class="header__menu-list">
             <li class="header__menu-item">
                 <a class="header__menu-link" href="billetterie.html">Billetterie</a>
@@ -79,8 +78,6 @@
     </section>
 
 <section class="films">
-        <p class="films__intro">Découvrez notre sélection spéciale de films d'Halloween pour enfants ! Plongez dans l'univers magique et amusant de cette fête, avec des films adaptés aux plus jeunes. Cliquez sur la chauve-souris pour explorer la programmation et partager un moment cinéma en famille !</p>
-
         <h4 class="films__title">Aperçu des films pour enfants</h4>
         <div class="films__list films__list--children">
             <img class="films__image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween Scooby-Doo !">
