--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
   <header class="header">
     <a class="header__logo" href="index.html">
         <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-    </a>
-    <button class="header__menu-btn"><img src="/assets/icons/menu.svg" alt="menu-btn"></button>
+      <button class="header__menu-btn">
+          <img src="/assets/icons/menu.svg" alt="menu-btn">
+      </button>
+      
     <nav class="header__nav menu" id="mainNav" aria-hidden="true">
+      <button class="menu__close-btn" onclick="goBack()">
+          <img src="/assets/img/Menu/btn-close.svg" alt="menu-btn">
+      </button>
+      <script>
+        function goBack() {
+            window.history.back();
+        }
+      </script>
         <ul class="header__menu-list">
             <li class="header__menu-item">
                 <a class="header__menu-link" href="billetterie.html">Billetterie</a>
